--- a/iOS_Challenge/Presentation/View/StoryBoard/Base.lproj/Main.storyboard
+++ b/iOS_Challenge/Presentation/View/StoryBoard/Base.lproj/Main.storyboard
@@ -36,9 +36,8 @@
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JHU-ni-TbQ">
-                                        <rect key="frame" x="0.0" y="250" width="200" height="40"/>
+                                        <rect key="frame" x="11.5" y="250" width="177" height="40"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="200" id="48t-Mw-M3r"/>
                                             <constraint firstAttribute="height" constant="40" id="fcB-zR-ear"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
@@ -47,9 +46,8 @@
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JpA-HN-xIX">
-                                        <rect key="frame" x="0.0" y="315" width="200" height="40"/>
+                                        <rect key="frame" x="27" y="315" width="146" height="40"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="200" id="GrT-Ps-Y0B"/>
                                             <constraint firstAttribute="height" constant="40" id="sZO-8m-4Iq"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
@@ -76,7 +74,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XUI-dQ-q4G" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-497.10144927536237" y="203.57142857142856"/>
+            <point key="canvasLocation" x="-436" y="204"/>
         </scene>
         <!--Auth Navigation Bar Controller-->
         <scene sceneID="MVB-oO-pWq">
